# python-gui

./: .gitignore  ARQUITETURA_PIL_vs_QML.txt  ARQUITETURA_QML.txt  Cargo.toml  gdal_handler.py  main.py  main.qml  map_system_interactive_demo.py  requirements.txt
Ui/: Ui.qmlproject  Ui.qmlproject.qtds  Ui.qrc  qmldir
Ui/Ui/: AppMenuBar.qml  AppStatusBar.qml  AppToolBar.qml  AttributeTablePanel.qml  AttributeTableWindow.qml  BrowserPanel.qml  EmptyPanel.qml  InfoPanel.qml  LayersPanel.qml  MapCanvas.qml  ProcessingPanel.qml  PropertiesPanel.qml  SidePanel.qml  ToolsPanel.qml  qmldir
Ui/UiContent/: App.qml  MainWindow.ui.qml
data/: exemplo_pontos.csv
data/projections/: README.txt
data/rasters/: README.txt
data/vectors/: README.txt
gui/: Main.qml  README.md
gui/components/: AppMenuBar.qml  AppStatusBar.qml  AppTheme.qml  AppToolBar.qml  EmptyPanel.qml  InfoPanel.qml  LayersPanel.qml  MapCanvas.qml  ProcessingPanel.qml  PropertiesPanel.qml  SidePanel.qml  qmldir
map_system/: __init__.py  coordinate_transform.py  layer.py  layer_manager.py  map_canvas.py  map_canvas_interactive.py  map_tool.py  qml_renderer.py  renderer.py
